# Nos

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  HOWTOUSE.md  LICENSE  README.md  requirements.txt
config/: c41.toml  c42.toml  c43.toml  c5x.toml  c61.toml  c62-recovery.toml  c62.toml  c63.toml  c64.toml  c65.toml  cloudlab-small-perf.toml  cloudlab-small.toml  lab-single.toml  lab-small.toml  lab.toml
config/workloads/: degraded-small.toml  degraded1-128.toml  degraded1-1k.toml  degraded1-256.toml  degraded1-4k.toml  degraded1-64.toml  degraded2-128.toml  degraded2-1k.toml  degraded2-256.toml  degraded2-4k.toml  degraded2-64.toml  degraded3-128.toml  degraded3-1k.toml  degraded3-256.toml  degraded3-4k.toml  degraded3-64.toml  etc-r50.toml  etc-r95.toml  insertion-1k.toml  prepare-128.toml  prepare-1k.toml  prepare-256.toml  prepare-4k.toml  prepare-64.toml  prepare-etc.toml  prepare-test.toml  readonly-128.toml  readonly-1k.toml  readonly-256.toml  readonly-4k.toml  readonly-64.toml  readonly-mwe.toml  readonly-test.toml  readonly-zipf-128.toml  readonly-zipf-1k.toml  readonly-zipf-256.toml  readonly-zipf-4k.toml  readonly-zipf-64.toml  twemcache-prepare.toml  twemcache.toml  (+15 more)
data/: README.md  collect.ipynb  memory-revision.txt  memory.txt
data/degraded/: cocytus-42.csv  cocytus-62.csv  cocytus-63.csv  nos-42.csv  nos-62.csv  nos-63.csv  rdp-42.csv  rdp-62.csv  repl-42.csv  repl-62.csv  repl-63.csv  split-42.csv  split-62.csv  split-63.csv
data/res.old/: commoncase-41.xlsx  commoncase-42.xlsx  commoncase-62.xlsx  commoncase-63.xlsx  commoncase-ycsbetc-41.xlsx  commoncase-ycsbetc-42.xlsx  commoncase-ycsbetc-62.xlsx  commoncase-ycsbetc-63.xlsx  commoncase-zipf-41.xlsx  commoncase-zipf-42.xlsx  commoncase-zipf-62.xlsx  commoncase-zipf-63.xlsx  recovery.xlsx  sensitivity.xlsx  waittime.xlsx
isal-sys/src/: lib.rs
motivation/ecbw/: .gitignore  Makefile  README.md  ec.cpp  test.h  xor.cpp
nos/: Cargo.toml  README.md
nos-cli/: Cargo.toml  README.md
nos-cli/src/: distributed.rs  lib.rs  main.rs
nos-cli/src/perf/: mod.rs  op.rs  perfstat.rs
nos-cli/src/runners/: closed_loop.rs  mod.rs  open_loop.rs  prepare.rs
nos-cli/src/utils/: align.rs  corelist.rs  duration_ser.rs  hostname.rs  mod.rs  prepare.rs  share.rs
nos-cli/src/workload/: defs.rs  generator.rs  mod.rs  trace.rs
nos/src/: key.rs  lib.rs  main.rs  rpc_types.rs
nos/src/baselines/: cocytus.rs  dynbackup.rs  mds_sim.rs  pq.rs  raid.rs  repl.rs  repl_handoff.rs  split.rs  split_dyn.rs  split_lb.rs
nos/src/ctrl/: cluster.rs  dist_barrier.rs  mod.rs  nthreads.rs
nos/src/ec/: isal_wrappings.rs  mod.rs  sbibd.rs
nos/src/objstore/: meta.rs  mod.rs  mod.rs.versioned  parity_picker.rs  rpc_res.rs  snmgr.rs  stats.rs
nos/src/utils/: align.rs  hasher.rs  holedvec.rs  mod.rs  sleep.rs  yield_now.rs
numa-sys/: Cargo.toml  build.rs
numa-sys/src/: bindings.rs  lib.rs
scripts/: .gitignore  cloc.sh  inspect-unc.py  memory.sh  mwe.sh
trace-preprocess/: Cargo.toml  README.md
(+4098 files in other folders)
